--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -14,11 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
-        android:textSize="15sp"
+        android:padding="3dp"
+        android:textSize="14sp"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="20dp" />
+        android:layout_marginRight="20dp"
+        app:fontFamily="@font/proxima_nova_regular"
+        />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/screen_viewpager"
